@@ -31,6 +31,7 @@ $ -> Language fix or change
  # Updating JLanguageTest
  # Corrected JArrayHelperTest unicode corruption
  # [#23569] When adding a form as plugin into article "JLIB_APPLICATION_ERROR_UNHELD_ID" is thrown. Thanks Mark.
+ # [#23439] redundant code in components/com_weblinks/controllers/weblink.php. Thanks Bill.
 
 -------------------- 1.6.0 Beta15 Release [29-Nov-2010] ------------------
 
